<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/directionButtons"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"

        tools:context="org.pondar.pacmankotlin.MainActivity">


        <Button
            android:id="@+id/moveUp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/move_up" />

        <Button
            android:id="@+id/moveRight"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/move_right" />


        <Button

            android:id="@+id/moveLeft"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/move_left" />

        <Button
            android:id="@+id/moveDown"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/move_down" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        tools:context="org.pondar.pacmankotlin.MainActivity"
        android:layout_alignParentTop="true"
        android:id="@+id/topButtons">


    <TextView
        android:id="@+id/pointsView"
        android:textSize="24sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/points" />

        <Button
            android:id="@+id/reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset" />

        <Button
            android:id="@+id/play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play" />

        <Button
            android:id="@+id/pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pause" />

    </LinearLayout>


    <org.pondar.pacmankotlin.GameView
        android:id="@+id/gameView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_above="@id/directionButtons"
        android:layout_below="@id/time">

    </org.pondar.pacmankotlin.GameView>

    <TextView
        android:id="@+id/time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="175dp"
        android:layout_marginTop="49dp"
        android:layout_marginEnd="177dp"
        android:text="@string/time" />


</RelativeLayout>
